Avoid overflow of badge.

--- a/assets/css/jwvdm.css
+++ b/assets/css/jwvdm.css
@@ -4,6 +4,7 @@ body {
   color: #ddd;
   font-family: "Open Sans";
   font-weight: normal;
+  overflow-x: hidden;
 }
 
 a {
